# knowledge-tracing-main

./: .gitignore  README.md  evaluate_predictions.py  generate_predictions.py  pyproject.toml  unit_test.py
Models/: ATKT.py  BKT.py  DKT.py  DSAKT.py  Elo.py  KTM.py  PFA.py  bkt_bf.py
Utils/: utils_ATKT.py  utils_DSAKT.py
analysis/: FactorAnalysis.R  factor_correlations_between.csv  factor_correlations_overall.csv  factor_correlations_within.csv  factor_loadings_between.csv  factor_loadings_overall.csv  factor_loadings_within.csv  factor_scores_between.csv  multilevel_factor_analysis.py  variable_correlations_between.csv  variable_correlations_overall.csv  variable_correlations_within.csv
data/processed/test/tabular/: test.csv
data/processed/train/sequential/: converted_fold_0.csv  converted_fold_1.csv  converted_fold_2.csv  converted_fold_3.csv  converted_fold_4.csv  converted_fold_5.csv
data/processed/train/tabular/: converted_fold_0.csv  converted_fold_1.csv  converted_fold_2.csv  converted_fold_3.csv  converted_fold_4.csv
output/: metrics.json
output/factor_analysis/: between_correlation_matrix.csv  between_factor_loadings1.csv  between_factor_loadings2.csv  factor_model_comparison.csv  icc_by_measure.csv  within_correlation_matrix.csv  within_factor_loadings1.csv  within_factor_loadings2.csv
output/factor_analysis/supplement_factor_loadings/: between_factor_loadings3_varimax.csv  between_factor_loadings4_varimax.csv  within_factor_loadings3_varimax.csv  within_factor_loadings4_varimax.csv
preprocess/: cleaning.py  preprocess.py  splitting.py
